--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.12",
+    "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "@fortawesome/vue-fontawesome": "^0.1.3",
     "style-resources-loader": "^1.2.1",
     "vue": "^2.5.17",
     "vue-cli-plugin-style-resources-loader": "^0.1.3",
