--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/vue-fontawesome": "^0.1.3",
     "axios": "^0.18.0",
+    "lodash": "^4.17.11",
     "style-resources-loader": "^1.2.1",
     "vue": "^2.5.17",
     "vue-cli-plugin-style-resources-loader": "^0.1.3",
